update index page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="TemplateMo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Finance Business HTML5 Template</title>
+    <title>Influence Capital</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,6 +25,11 @@ Finance Business TemplateMo
 https://templatemo.com/tm-545-finance-business
 
 -->
+<style>
+html {
+  scroll-behavior: smooth;
+}
+</style>
   </head>
 
   <body>
@@ -64,7 +69,7 @@ https://templatemo.com/tm-545-finance-business
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Finance Business</h2></a>
+          <a class="navbar-brand" href="index.html"><!-- <h2>Influence Capital</h2> --></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -80,7 +85,10 @@ https://templatemo.com/tm-545-finance-business
               </li>  
               <li class="nav-item">
                 <a class="nav-link" href="services.html">Our Services</a>
-              </li>                          
+              </li>  
+              <li class="nav-item">
+                <a class="nav-link" href="#blogs">Blogs</a>
+              </li>                        
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
@@ -101,10 +109,12 @@ https://templatemo.com/tm-545-finance-business
           <div class="item item-1">
             <div class="img-fill">
                 <div class="text-content">
-                  <h6>we are ready to help you</h6>
-                  <h4>Financial Analysis<br>&amp; Consulting</h4>
-                  <p>This finance HTML template is 100% free of charge provided by TemplateMo for everyone. This is a multiple-page version with different HTML pages. <a href="one-page.html">One-page version</a> is available as of 2021 February.</p>
-                  <a href="contact.html" class="filled-button">contact us</a>
+                  <!-- <h6>we are ready to help you</h6> -->
+                  <h6 style="color: #000;">Power lasts ten years, <br>influence more than a <br>lifetime. 
+                    Influence Capital, <br>an asset more valuable <br>than prime.
+                    Monetizing <br>the influence is the need <br>of our time.</h6>
+                  <!-- <p>This finance HTML template is 100% free of charge provided by TemplateMo for everyone. This is a multiple-page version with different HTML pages. <a href="one-page.html">One-page version</a> is available as of 2021 February.</p> -->
+                  <!-- <a href="contact.html" class="filled-button">contact us</a> -->
                 </div>
             </div>
           </div>
@@ -151,7 +161,7 @@ https://templatemo.com/tm-545-finance-business
       </div>
     </div>
 
-    <div class="services">
+     <div class="services" id="services">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -162,7 +172,7 @@ https://templatemo.com/tm-545-finance-business
           </div>
           <div class="col-md-4">
             <div class="service-item">
-              <img src="assets/images/service_01.jpg" alt="">
+              <img src="assets/images/service_021.jpg" alt="">
               <div class="down-content">
                 <h4>Digital Currency</h4>
                 <p>Sed tincidunt dictum lobortis. Aenean tempus diam vel augue luctus dignissim. Nunc ornare leo tortor.</p>
@@ -172,7 +182,7 @@ https://templatemo.com/tm-545-finance-business
           </div>
           <div class="col-md-4">
             <div class="service-item">
-              <img src="assets/images/service_02.jpg" alt="">
+              <img src="assets/images/service_021.jpg" alt="">
               <div class="down-content">
                 <h4>Market Analysis</h4>
                 <p>Sed tincidunt dictum lobortis. Aenean tempus diam vel augue luctus dignissim. Nunc ornare leo tortor.</p>
@@ -182,11 +192,76 @@ https://templatemo.com/tm-545-finance-business
           </div>
           <div class="col-md-4">
             <div class="service-item">
-              <img src="assets/images/service_03.jpg" alt="">
+              <img src="assets/images/service_021.jpg" alt="">
               <div class="down-content">
                 <h4>Historical Data</h4>
                 <p>Sed tincidunt dictum lobortis. Aenean tempus diam vel augue luctus dignissim. Nunc ornare leo tortor.</p>
                 <a href="" class="filled-button">Read More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="services" id="blogs">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-heading">
+              <h2>Blogs </h2>
+              <!-- <span>Aliquam id urna imperdiet libero mollis hendrerit</span> -->
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="service-item">
+              <img src="assets/images/service_01.jpg" alt="">
+              <div class="down-content">
+                <h4>Influence Capital: The Quadrillion Super Asset Of 21st Century</h4>
+                <p>Technology can be used to tokenize influence for creating quantifiable capital assets. How big this new asset class could be? We make an attempt to answer the question.</p>
+                <a href="https://drfazal.medium.com/influence-capital-the-quadrillion-super-asset-of-21st-century-845871c113da" class="filled-button">Read More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="service-item">
+              <img src="assets/images/service_02.jpg" alt="">
+              <div class="down-content">
+                <h4>Sharonomics: Rethinking Economics In 21st Century</h4>
+                <p>Sharonomics is a portmanteau blend of “share” & “economics” that introduces a new branch of knowledge.<br><br></p>
+                <a href="https://drfazal.medium.com/sharonomics-rethinking-economics-in-21st-century-323ea7851b01" class="filled-button">Read More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="service-item">
+              <img src="assets/images/service_03.jpg" alt="">
+              <div class="down-content">
+                <h4>Influence Capital: The Big Discovery</h4>
+                <p>Almost anything one owns and uses for personal or investment purposes is a capital asset. If one uses quantifiable tokenized influence to acquire or make new asset investments, then influence indeed should qualify as a capital asset.</p>
+                <a href="https://drfazal.medium.com/influence-capital-the-big-discovery-523104192968" class="filled-button">Read More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="service-item">
+              <img src="assets/images/service_04.jpg" alt="">
+              <div class="down-content">
+                <h4>Influence Capital: A New Asset Class?</h4>
+                <p>If ZeroCash Funds Projects Using Funders’ Influence Exclusively, Can Influence Be Considered As A New Asset Class?<br><br><br></p>
+                <a href="https://drfazal.medium.com/influence-capital-a-new-asset-class-ce023540582a" class="filled-button">Read More</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="service-item">
+              <img src="assets/images/service_05.jpg" alt="">
+              <div class="down-content">
+                <h4>Influence Of The Idling Trillions</h4>
+                <p>A civilization that lets TRILLIONS worth of influence idled away on the face of extreme hunger & poverty can have only one excuse for such indifference — IGNORANCE. Sharonomics takes that excuse away.</p>
+                <a href="https://drfazal.medium.com/influence-of-the-idling-trillions-61f173c1232c" class="filled-button">Read More</a>
               </div>
             </div>
           </div>
